# Claudiness

./: .gitignore  CLAUDE.md  README.md  claudiness.py  pyproject.toml
.github/workflows/: publish.yml
prompts/: update-styles.md
src/claudiness/: __init__.py  cli.py  fetch.py  patterns.py  report.py  scoring.py  structural.py  style_loader.py
src/claudiness/styles/: 2026-02-26_ChatGPT.style  2026-02-26_Claude.style  2026-02-26_Grok.style
tests/: test_scoring.py
