[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claudiness"
version = "2.0.0"
description = "Multi-model AI writing style detector"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "David Rickmann"},
]
keywords = ["ai", "writing-style", "detection", "claude", "chatgpt", "grok", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Repository = "https://github.com/DavidRickmann/claudiness"
Issues = "https://github.com/DavidRickmann/claudiness/issues"

[project.optional-dependencies]
fetch = ["requests"]

[project.scripts]
claudiness = "claudiness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claudiness = ["styles/*.style"]
